New files added - [] Files modified - [ForgotPassword.js,ResetPassword.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -22,13 +22,13 @@
                                 <wm-gridrow name="gridrow10">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn24">
                                         <wm-form-field readonly="false" name="newPassword" displayname="New Password" key="newPassword" type="string" show="true" widget="text" placeholder="Enter Password" required="true" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
-                                        validationmessage="Passwords must contain a minimum of 8 characters and also contain minimum of 1 letter, 1 number and one special symbol" inputtype="password"></wm-form-field>
+                                        validationmessage="A strong password is at least 8 characters long and includes uppercase and lowercase letters, numbers, and symbols." inputtype="password"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow11">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn25">
                                         <wm-form-field displayname="Retype Password" widget="text" show="true" type="custom" name="retypePassword" placeholder="Re Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
-                                        required="true" validationmessage="Passwords must contain a minimum of 8 characters and also contain minimum of 1 letter, 1 number and one special symbol" inputtype="password"></wm-form-field>
+                                        required="true" validationmessage="A strong password is at least 8 characters long and includes uppercase and lowercase letters, numbers, and symbols." inputtype="password"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
